--- a/index.qmd
+++ b/index.qmd
@@ -23,9 +23,12 @@ about:
 
 # Bio
 
-I am a PhD student and Associate Lecturer in the Computer and Information Sciences Department at Northumbria University who is a member of the Northumbria Social Computing research group. I am currently conducting interdisciplinary research around misinformation and family communications, and I am also interested in research surrounding digital learning tools.
+I am currently an Innovation Fellow in the Northumbria Social Computing research group, at Northumbria University Newcastle. 
+My research explores misinformation, disinformation, fake news and generative AI using a interdisciplinary and human-centred approach.
 
 ## Updates
+{{< fa university >}} I have recently passed my PhD (subject to minor revisions). 
+
 {{< fa trophy >}} I have recently been awarded fellowship of the Higher Education Academy (HEA).
 
 {{< fa book-reader >}} I recently became an Associate Chair (AC) for the DIS'24 Work in Progress and Provocations track.
