--- a/publications.qmd
+++ b/publications.qmd
@@ -6,7 +6,11 @@ toc: true
 {{< fa scroll >}}: Conference Paper | 
 {{< fa newspaper >}}: Journal Article | 
 {{< fa toolbox >}}:Workshop Paper |
-{{< fa trophy >}}: Award Winning
+{{< fa trophy >}}: Award Winning |
+{{< fa people-group >}} Workshop Proposal
+
+##2024
+{{< fa people-group >}} Gowland, S., **Scott, L.**, Handley, G., Carter, A., van der Linden, D. and Lawson, S., 2024, December. More than Human Digital Civics. In Proceedings of the International Conference on Animal-Computer Interaction (pp. 1-5).
 
 ## 2023
 
